--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,9 @@
     "dependencies": {
         "jquery": "2.1.0",
         "angular": "1.2.2",
-        "angularLocalStorage": "0.1.7",
         "momentjs": "~2.6.0",
-        "lodash": "1.2.0"
+        "lodash": "1.2.0",
+        "ngStorage": "0.3.0"
     },
     "resolutions": {
         "angular": "1.2.2"
