--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "grunt-cli": "*",
         "grunt-contrib-cssmin": "~0.7.0",
         "grunt-contrib-sass": "0.6.0",
-        "grunt-contrib-watch": "~0.5.3"
+        "grunt-contrib-watch": "~0.5.3",
+        "grunt-contrib-jshint": "0.7.2"
     }
 }
