#19 made translations working

--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular": "1.2.2",
     "angular-translate": "2.1.0",
     "angular-translate-storage-local": "2.1.0",
+    "angular-translate-loader-static-files": "2.1.0",
     "momentjs": "~2.6.0",
     "lodash": "1.2.0",
     "ngstorage": "0.3.0",
