#5 added bitcore to bower

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "lodash": "1.2.0",
     "ngstorage": "0.3.0",
     "fontawesome": "~4.0.3",
-    "flag-icon-css": "0.6.3"
+    "flag-icon-css": "0.6.3",
+    "bitcore": "0.1.19"
   }
 }
